Hadoop HDFS Change Log

Trunk (Unreleased)

  INCOMPATIBLE CHANGES

    HDFS-3034. Remove the deprecated DFSOutputStream.sync() method.  (szetszwo)

    HDFS-5079. Cleaning up NNHAStatusHeartbeat.State from
    DatanodeProtocolProtos. (Tao Luo via shv)

    HDFS-5570. Deprecate hftp / hsftp and replace them with webhdfs / swebhdfs.
    (wheat9)

    HDFS-2538. option to disable fsck dots (Mohammad Kamrul Islam via aw)

    HDFS-7302. Remove "downgrade" from "namenode -rollingUpgrade" startup
    option since it may incorrectly finalize an ongoing rolling upgrade.
    (Kai Sasaki via szetszwo)

    HDFS-7985. WebHDFS should be always enabled. (Li Lu via wheat9)

    HDFS-7281. Missing block is marked as corrupted block (Ming Ma via
    Yongjun Zhang)

    HDFS-8349. Remove .xml and documentation references to dfs.webhdfs.enabled.
    (Ray Chiang via aajisaka)

    HDFS-8241. Remove unused NameNode startup option -finalize.
    (Brahma Reddy Battula via aajisaka)
 
  NEW FEATURES

    HDFS-3125. Add JournalService to enable Journal Daemon. (suresh)

  IMPROVEMENTS

    HDFS-4665. Move TestNetworkTopologyWithNodeGroup to common.
    (Junping Du via llu)

    HDFS-1620. Rename HdfsConstants -> HdfsServerConstants, FSConstants ->
               HdfsConstants. (Harsh J Chouraria via atm)

    HDFS-2197. Refactor RPC call implementations out of NameNode class (todd)

    HDFS-2572. Remove unnecessary double-check in DN#getHostName. (harsh)

    HDFS-2857. Cleanup BlockInfo class. (suresh)

    HDFS-2786. Fix host-based token incompatibilities in DFSUtil. (Kihwal Lee
    via jitendra)

    HDFS-2878. Fix TestBlockRecovery and move it back into main test directory.
    (todd)

    HDFS-2655. BlockReaderLocal#skip performs unnecessary IO.
    (Brandon Li via jitendra) 

    HDFS-3009. Remove duplicate code in DFSClient#isLocalAddress by using 
    NetUtils. (Hari Mankude via suresh)

    HDFS-3002. TestNameNodeMetrics need not wait for metrics update.
    (suresh)
